fix loader alignment

--- a/source/sass/modularity-guides.scss
+++ b/source/sass/modularity-guides.scss
@@ -9,6 +9,7 @@
 
   .c-loader {
     display: none;
+    top: 20px;
   }
 }
 
